--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -25,7 +25,7 @@
             <input class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
             <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
             <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
-            <input class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
+            <input style="display: none" class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
             <input id="dateInput" class="hidden-input" type="text" name="creationDate">
             <input id="usernameInput" class="hidden-input" type="text" name="email">
             <input id="passwordInput" class="hidden-input" type="text" name="password">
