--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -24,48 +24,7 @@
 </div>
 
 <div id="side-menu" class="side-nav">
-    <a href="#" id="btn-close" onclick="closeDrawer()">&times;</a>
-    <div id="drawer-user-info">
-        <img id="drawer-pic" src="../images/login.png" alt="drawer-pic">
-        <h1>Username</h1>
-    </div>
 
-    <a href="home.html">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/home.png" alt="">
-            <p>Home</p>
-        </div>
-    </a>
-    <a href="myProfile.html">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/portfolio.png" alt="">
-            <p>My projects</p>
-        </div>
-    </a>
-    <a href="projectUpload.html">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/upload.png" alt="">
-            <p>Upload project</p>
-        </div>
-    </a>
-    <a href="#">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/share.png" alt="">
-            <p>Share project</p>
-        </div>
-    </a>
-    <a class="drawer-settings" href="#">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/settings.png" alt="">
-            <p>Account settings</p>
-        </div>
-    </a>
-    <a class="drawer-logout" href="#">
-        <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/logout.png" alt="">
-            <p>Logout</p>
-        </div>
-    </a>
 </div>
 
 <div id="projectDetails">
@@ -117,8 +76,9 @@
 </div>
 
 <script src="../constants.js"></script>
-<script src="../js/projectDetails.js"></script>
 <script src="../js/general.js"></script>
+<script src="../js/drawer.js"></script>
+<script src="../js/projectDetails.js"></script>
 
 <script>
 
