ui for large screens

--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -10,7 +10,7 @@
 
 <img id="logo" src="../images/logo.png" alt="logo">
 
-<h1>Welcome to FolioHub</h1>
+<h1>Create an account</h1>
 
 <form id="register">
     <div id="regForm">
