--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -22,7 +22,7 @@
         </div>
         <div id="regForm">
             <input required class="mainMobileInput" type="text" maxlength="30" placeholder="Enter Username..." name="username">
-            <input class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
+            <input maxlength="20" class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
             <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
             <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
             <input style="display: none" class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
