--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -43,9 +43,8 @@
     <!-- Tags will display here -->
 </div>
 
-<div class="searchFilter">
+<div class="search-with-filter">
     <input type="text" placeholder="Search..." id="searchBar">
-
 
     <div class="filterMenu">
         <select class="filterBtn" onchange=filter(this.value)>
