--- a/html/home.html
+++ b/html/home.html
@@ -23,7 +23,7 @@
 
     </div>
     <div class="search-with-filter">
-        <input type="text" placeholder="Search..." id="searchBar">
+        <input class="searching" type="text" placeholder="Search..." id="searchBar">
 
         <div class="filterMenu">
             <select class="filterBtn" onchange=filter(this.value)>
