animations for myProfile project and drawer hover

--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -21,7 +21,7 @@
 </div>
 
 <div id="side-menu" class="side-nav">
-
+    <!-- Drawer menu will display here -->
 </div>
 
 <div class="user">
@@ -57,7 +57,7 @@
 </div>
 
 <ul id="userProjects">
-
+    <!-- Projects will display here -->
 </ul>
 
 <script src="../constants.js"></script>
