project comments started

--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -58,10 +58,15 @@
     </div>
 
     <div id="comments">
+        <div class="commentPopup" onclick="addComment()">
+            Add Comment +
+
+        </div>
 
         <!-- TODO project comments will appear here -->
 
     </div>
+
 
     <div class="user" id="user">
 
