edit button on hover in myProfile works

--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -15,7 +15,7 @@
     <h1>Login</h1>
     <form id="login" action="" method="post">
         <div>
-            <input class="mainMobileInput" type="email" placeholder="Username" name="username">
+            <input class="mainMobileInput" type="email" placeholder="Email" name="username">
             <input class="mainMobileInput" type="password" placeholder="Password" name="password">
         </div>
         <button class="mainMobileButton" type="submit">Log In</button>
