UI tweaking / comments

--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -5,6 +5,9 @@
     <title>Account Creation</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/accountCreate.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
