--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -6,6 +6,9 @@
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/accountCreateExtra.css" rel="stylesheet">
     <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
