--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -5,6 +5,9 @@
     <title>Project Details</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/projectDetails.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -58,25 +61,23 @@
     </div>
 
     <div id="comments">
-        <div class="commentPopup" onclick="addComment()">
-            Add Comment +
 
-        </div>
 
         <!-- TODO project comments will appear here -->
 
     </div>
 
-
     <div class="user" id="user">
 
     </div>
+
 
     <div id="moreInfo">
 
         <!-- TODO extra project information here -->
 
     </div>
+
 
 </div>
 
