--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -6,6 +6,9 @@
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/userLogin.css" rel="stylesheet">
     <link href="../images/favicon.ico" type="image/x-icon" rel="icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
