--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,9 @@
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/home.css" rel="stylesheet">
     <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -27,10 +30,10 @@
 
         <div class="filterMenu">
             <select class="filterBtn" onchange=filter(this.value)>
-                <option value="newest">Filter: Newest</option>
-                <option value="oldest">Filter: Oldest</option>
-                <option value="aZ">Filter: A-Z</option>
-                <option value="zA">Filter: Z-A</option>
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+                <option value="aZ">A-Z</option>
+                <option value="zA">Z-A</option>
             </select>
         </div>
     </div>
