--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -6,6 +6,9 @@
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/projectUpload.css" rel="stylesheet">
     <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -31,7 +34,7 @@
 
     <div id="regProjectPic">
         <label for="image-upload" class="custom-file-upload">
-            <i></i> +
+            <p>+</p>
         </label>
         <input id="image-upload" type="file" placeholder="Photo" name="logo">
     </div>
