--- a/html/home.html
+++ b/html/home.html
@@ -34,6 +34,8 @@
                 <option value="oldest">Oldest</option>
                 <option value="aZ">A-Z</option>
                 <option value="zA">Z-A</option>
+                <option value="rating">Rating</option>
+                <option value="comments">Comments</option>
             </select>
         </div>
     </div>
