--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -12,29 +12,36 @@
 </head>
 <body>
 
-    <form id="register" enctype="multipart/form-data">
-        <div id="regProfilePic">
-            <label for="image-upload" class="custom-file-upload">
-                <p>+</p>
-            </label>
-            <input id="image-upload" type="file" placeholder="Photo" accept="image/*" name="profilePic">
+<form id="register" enctype="multipart/form-data">
+    <div id="regProfilePic">
+        <label for="image-upload" class="custom-file-upload">
+            <p>+</p>
+        </label>
+        <input id="image-upload" type="file" placeholder="Photo" accept="image/*" name="profilePic">
+    </div>
+    <div id="regForm">
+        <input required class="mainMobileInput" type="text" maxlength="30" placeholder="Enter Username..." name="username">
+        <input maxlength="20" class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
+        <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
+        <div id="userTags">
+            <input class="mainMobileInput" pattern="[a-zA-Z]" id="input-user-tag" type="text" placeholder="Enter a Single Tag..." name="tags">
+            <button class="mainMobileButton" id="check-user-tag">Check</button>
         </div>
-        <div id="regForm">
-            <input required class="mainMobileInput" type="text" maxlength="30" placeholder="Enter Username..." name="username">
-            <input maxlength="20" class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
-            <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
-            <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
-            <input style="display: none" class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
-            <input id="dateInput" class="hidden-input" type="text" name="creationDate">
-            <input id="usernameInput" class="hidden-input" type="text" name="email">
-            <input id="passwordInput" class="hidden-input" type="text" name="password">
+        <div id="user-tags-array" readonly="readonly">
+            <!-- user tags show here -->
         </div>
-        <button type="submit" class="mainMobileButton">Save</button>
-    </form>
+        <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
+        <input style="display: none" class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
+        <input id="dateInput" class="hidden-input" type="text" name="creationDate">
+        <input id="usernameInput" class="hidden-input" type="text" name="email">
+        <input id="passwordInput" class="hidden-input" type="text" name="password">
+    </div>
+    <button type="submit" class="mainMobileButton">Save</button>
+</form>
 
-    <script src="../constants.js"></script>
-    <script src="../js/general.js"></script>
-    <script src="../js/serialize.js"></script>
-    <script src="../js/accountCreateExtra.js"></script>
+<script src="../constants.js"></script>
+<script src="../js/general.js"></script>
+<script src="../js/serialize.js"></script>
+<script src="../js/accountCreateExtra.js"></script>
 </body>
 </html>
