ui styling changes for tags

--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -26,6 +26,9 @@
         <div id="userTags">
             <input class="mainMobileInput" pattern="[a-zA-Z]" id="input-user-tag" type="text" placeholder="Enter a Single Tag..." name="tags">
             <button class="mainMobileButton" id="check-user-tag">Check</button>
+            <div id="tag-error">
+
+            </div>
         </div>
         <div id="user-tags-array" readonly="readonly">
             <!-- user tags show here -->
