thumbnails + fab for adding projects

--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -66,6 +66,11 @@
     <!-- Projects will display here -->
 </ul>
 
+<div id="fab-add-project">
+    <div id="vertical-bar"></div>
+    <div id="horizontal-bar"></div>
+</div>
+
 <script src="../constants.js"></script>
 <script src="../js/general.js"></script>
 <script src="../js/drawer.js"></script>
