zooming feature on pics

--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
+
+<div id="lb-back">
+    <div id="lb-img"></div>
+</div>
+
 <body>
 
 <div class="menuMobile">
@@ -76,8 +81,6 @@
         <!-- TODO extra project information here -->
 
     </div>
-
-
 </div>
 
 <script src="../constants.js"></script>
