ui tweaking + about page

--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<img id="logo" src="../images/logo.png" alt="logo">
+<img id="logo" src="../images/logoLong.png" alt="logo">
 
 <h1>Create an account</h1>
 
