--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -19,7 +19,8 @@
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-        <img id="logo" src="../images/logo.png">
+        <img id="logo" src="../images/logoLong.png">
+        <div class="logo-container" style="visibility: hidden; pointer-events: none" ></div>
     </div>
 </div>
 
