--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -19,7 +19,7 @@
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-        <img id="logo" src="../images/logo.png">
+        <img id="logo" src="../images/logoLong.png">
         <div class="logo-container" id="profilePicContainer">
             <img id="profilePic" src="../images/login.png">
         </div>
