--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<img id="logo" src="../images/logo.png" alt="logo">
+<img id="logo" src="../images/logoLong.png" alt="logo">
 
 <div class="forms">
     <h1>Login</h1>
