--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -24,11 +24,10 @@
     </div>
 </div>
 
-<div id="side-menu" class="side-nav">
-    <!-- Drawer menu will display here -->
-</div>
+<div id="side-menu" class="side-nav"><!-- Drawer menu will display here --></div>
 
 <div class="user">
+
     <img id="userImg" src="../images/profilePic.png">
 
     <div id="userInfo">
@@ -41,9 +40,7 @@
 
     <p id="userDesc"></p>
 
-    <div id="tags">
-        <!-- Tags will display here -->
-    </div>
+    <div id="tags"><!-- Tags will display here --></div>
 
 </div>
 
@@ -52,20 +49,19 @@
     <input type="text" placeholder="Search..." id="searchBar">
 
     <div class="filterMenu">
-        <select class="filterBtn" onchange=filter(this.value)>
+        <select class="filterBtn" onchange=sort(this.value)>
             <option value="newest">Newest</option>
             <option value="oldest">Oldest</option>
             <option value="aZ">A-Z</option>
             <option value="zA">Z-A</option>
             <option value="rating">Rating</option>
             <option value="comments">Comments</option>
+            <option value="privacy">Privacy</option>
         </select>
     </div>
 </div>
 
-<ul id="userProjects">
-    <!-- Projects will display here -->
-</ul>
+<ul id="userProjects"><!-- Projects will display here --></ul>
 
 <div id="fab-add-project">
     <div id="vertical-bar"></div>
@@ -76,7 +72,6 @@
 <script src="../js/general.js"></script>
 <script src="../js/drawer.js"></script>
 <script src="../js/myProfile.js"></script>
-
 
 </body>
 </html>
