--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -27,60 +27,29 @@
         <div class="logo-container" id="profilePicContainer">
             <img id="profilePic" src="../images/login.png">
         </div>
-
     </div>
 </div>
 
-<div id="side-menu" class="side-nav">
-
-</div>
+<div id="side-menu" class="side-nav"></div>
 
 <div id="projectDetails">
 
     <div id="appOverview">
-
-        <div id="appOverviewTop">
-
-        </div>
-        <div id="appOverviewBottom">
-
-        </div>
+        <div id="appOverviewTop"></div>
+        <div id="appOverviewBottom"></div>
     </div>
 
-    <div id="videoMedia">
+    <div id="videoMedia"><!-- project media will appear here --></div>
 
-        <!-- TODO project media will appear here -->
+    <div id="imageMedia"><!-- project media will appear here --></div>
 
-    </div>
+    <div id="appLongDescription"><!-- Longer Description of project goes here --></div>
 
-    <div id="imageMedia">
+    <div id="comments"><!-- project comments will appear here --></div>
 
-        <!-- TODO project media will appear here -->
+    <div class="user" id="user"><!-- user info goes here --></div>
 
-    </div>
-
-    <div id="appLongDescription">
-
-        <!-- TODO Longer Description of project goes here -->
-
-    </div>
-
-    <div id="comments">
-
-        <!-- TODO project comments will appear here -->
-
-    </div>
-
-    <div class="user" id="user">
-
-    </div>
-
-
-    <div id="moreInfo">
-
-        <!-- TODO extra project information here -->
-
-    </div>
+    <div id="moreInfo"><!-- extra project information here --></div>
 </div>
 
 <script src="../constants.js"></script>
