image type validation

--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -33,14 +33,12 @@
         <label for="image-upload" class="custom-file-upload">
             <p>+</p>
         </label>
-        <input id="image-upload" type="file" placeholder="Photo" name="logo">
+        <input id="image-upload" type="file" placeholder="Photo" accept="image/*" name="logo">
     </div>
     <input required class="mainMobileInput" maxlength="30" id="projectName" type="text" placeholder="Project Name"
            name="name">
     <textarea class="mainMobileInput" maxlength="60" id="shortDescTextArea"
               placeholder="Short description" name="outline"></textarea>
-    <input style="display: none" class="mainMobileInput" placeholder="tag1,tag2,tag3,..." type="text"
-           pattern="^[.]+(,[.]+)*$" name="tags">
 
     <h3>Add a video</h3>
 
